# libjaro

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile.am  README.md  configure.ac  jaro.c  jaro.h  jaro.h.in  unicode.c
test/: CMakeLists.txt  test_jaro.c
tests/: Makefile.am  test_jaro.c
